--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
+    "cypress": "^3.4.1",
     "express": "^4.17.1",
     "lodash-id": "^0.14.0",
     "lowdb": "^1.0.0",
@@ -21,11 +22,9 @@
     "react-scripts": "3.1.1"
   },
   "scripts": {
-    "dev:start": "node ./server.js",
-    "start": "react-scripts start",
+    "start": "node ./server.js",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "cypress open"
   },
   "eslintConfig": {
     "extends": "react-app"
